--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine": "^7.0.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
