--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine": "^7.0.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "country-state-city": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
