--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.0"
   }
 }
